// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Screens snapshots Create ProductInfo screen snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFF",
      "flex": 1,
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 5,
      }
    }
  >
    <Image
      source={
        Object {
          "scale": 1,
          "uri": "image",
        }
      }
      style={
        Object {
          "height": "100%",
          "resizeMode": "stretch",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#91939a",
              "fontSize": 15,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingLeft": 5,
          }
        }
      >
        <Text />
      </View>
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#91939a",
              "fontSize": 15,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
           Avaliações
        </Text>
      </View>
    </View>
    <RCTScrollView
      style={
        Object {
          "overflow": "scroll",
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "fontSize": 16,
              "paddingTop": 5,
            }
          }
        />
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "flex": 0.7,
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 0.9,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#a0dfdf",
          "borderRadius": 5,
          "height": "76%",
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "700",
            "textTransform": "uppercase",
          }
        }
      >
        Comprar
      </Text>
    </View>
  </View>
</View>
`;

exports[`Screens snapshots Create ShoppingCart screen snapshot 1`] = `
<View>
  <RCTScrollView
    ListFooterComponent={<BlankPage />}
    contentContainerStyle={
      Object {
        "marginTop": 5,
        "padding": 5,
      }
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "flex": 1,
              "height": 1334,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#91939a",
                "fontSize": 20,
                "height": "80%",
                "textAlign": "center",
                "textAlignVertical": "center",
              }
            }
          >
            Nenhum item no carrinho
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Screens snapshots Create home screen snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f9f9f9",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "marginTop": 5,
        "padding": 5,
      }
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    initialNumToRender={10}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
</View>
`;
